--- a/src/slides.jade
+++ b/src/slides.jade
@@ -5,7 +5,7 @@ section
 section
     section
         h2 Javascript
-        img(src="./src/images/jsgolf.jpg")
+        img(src="src/images/jsgolf.jpg")
         p This is Javascript. If you put big wheels and a racing stripe on a golf cart, it's still a fucking golf cart.
         br
         small
