--- a/src/slides.jade
+++ b/src/slides.jade
@@ -330,8 +330,33 @@ section
                     static says = 'I love JS!';
                 }
 
+section
+    section
+        h2 Popularity
+        h4 languages usage
+        img(src="src/images/popularity-github.jpg")
+        small @source: github
+
+
+    section
+        h2 Popularity
+        h4 libraries count
+        img(src="src/images/modules.png")
+        small @source: &nbsp;
+            a(href="http://www.modulecounts.com/") modulecounts.com
+
+    section
+        h2 Popularity
+        h4 google trends - tutorials search
+        img(src="src/images/popularity-pypl.png")
+        small @source: &nbsp;
+            a(href="http://pypl.github.io/PYPL.html") pypl.github.io
+
+
+
 section.
-    - es6/es7/...
+    + es6/es7/...
+
     - http://developer.telerik.com/featured/what-to-expect-from-javascript-in-2016-beyond-the-browser/?utm_source=javascriptweekly&utm_medium=email
     - https://github.com/copy/v86?utm_source=javascriptweekly&utm_medium=email
     - https://www.google.co.uk/search?q=always+bet+on+js
