--- a/src/slides.jade
+++ b/src/slides.jade
@@ -332,6 +332,9 @@ section
 
 section
     section
+        h1 Popularity
+
+    section
         h2 Popularity
         h4 languages usage
         img(src="src/images/popularity-github.jpg")
@@ -352,7 +355,80 @@ section
         small @source: &nbsp;
             a(href="http://pypl.github.io/PYPL.html") pypl.github.io
 
+section
+    section
+        h1 Ubiquity
 
+    section
+        h2 Ubiquity
+        h4 Browser & server
+        ul
+            li Node.js
+            li Angular
+            li React
+            li Ember
+            li Backbone
+            li Meteor
+            li Polymer
+            li Aurelia
+            li ...
+        div
+            br
+            a(href="http://www.isaacchansky.me/days-since-last-new-js-framework/") days-since-last-new-js-framework
+
+    section
+        h2 Ubiquity
+        h4 Desktop apps
+        ul
+            li
+                a(href="http://electron.atom.io/") Electron (Atom Shell)
+            li
+                a(href="http://appjs.com/") App.js
+            li
+                a(href="http://nwjs.io/") NW.js (node-webkit)
+
+    section
+        h2 Ubiquity
+        h4 Mobile native apps
+        ul
+            li
+                a(href="https://cordova.apache.org/") Cordova
+            li
+                a(href="http://phonegap.com/") Phonegap
+            li
+                a(href="https://facebook.github.io/react-native/") React-Native
+            li
+                a(href="http://ionicframework.com/") Ionic
+            li
+                a(href="https://www.nativescript.org/") NativeScript
+            li
+                a(href="https://tabrisjs.com/") Tabris
+
+    section
+        h2 Ubiquity
+        h4 Microcontrollers
+        ul
+            li
+                a(href="http://johnny-five.io/") Johnny Five
+            li
+                a(href="http://www.espruino.com/") Espruino
+            li
+                a(href="https://tessel.io/") Tessel
+            li
+                a(href="http://iop.io/") Iop.io
+
+    section
+        h2 Ubiquity
+        h4 Drones & IoT
+        ul
+            li
+                a(href="https://github.com/felixge/node-ar-drone") node-ar-drone
+            li
+                a(href="https://samsung.github.io/iotjs/") iot.js
+            li
+                a(href="https://cylonjs.com/") cyclon.js
+            li
+                a(href="https://www.cesanta.com/products/smart-js") Smart.js
 
 section.
     + es6/es7/...
@@ -361,13 +437,8 @@ section.
     - https://github.com/copy/v86?utm_source=javascriptweekly&utm_medium=email
     - https://www.google.co.uk/search?q=always+bet+on+js
     - transpiler Source-to-source compiler
-    - nw.js/electron
-    - react native
-    - johny five
-    - cordova/phonegap
-    - nodejs
+
     - npm
-    - tessel
     - web workers
                     - transferable objects, 0 copy
                     - shared/dedicated
