--- a/src/index.jade
+++ b/src/index.jade
@@ -20,6 +20,9 @@ html(lang='en')
         script(src='bower_components/reveal-js/js/reveal.js')
         script.
             Reveal.initialize({
+                progress: true,
+                slideNumber: false,
+                history: true,
                 dependencies: [
                     {
                         src: 'bower_components/highlightjs/highlight.pack.min.js',
