--- a/src/index.jade
+++ b/src/index.jade
@@ -9,6 +9,7 @@ html(lang='en')
         link(rel='stylesheet', href='bower_components/reveal-js/css/theme/moon.css')
         link(rel='stylesheet', href='bower_components/github-fork-ribbon-css/gh-fork-ribbon.css')
         link(rel='stylesheet', href='bower_components/highlightjs/styles/default.css')
+        link(rel='stylesheet', href='src/styles/common.css')
         style
             include ./styles/common.css
     body
