--- a/src/slides.jade
+++ b/src/slides.jade
@@ -378,12 +378,12 @@ section
 
     section
         h2 Ubiquity
-        h4 Desktop apps
+        h4 Cross platform desktop apps
         ul
             li
-                a(href="http://electron.atom.io/") Electron (Atom Shell)
-            li
                 a(href="http://appjs.com/") App.js
+            li
+                a(href="http://electron.atom.io/") Electron (Atom Shell)
             li
                 a(href="http://nwjs.io/") NW.js (node-webkit)
 
@@ -438,6 +438,10 @@ section
                 a(href="https://github.com/kimmobrunfeldt/concurrently") concurently
             li
                 a(href="https://github.com/dthree/cash") cach
+            li
+                a(href="https://github.com/shipitjs/shipit") shipit
+            li
+                a(href="https://www.npmjs.com/package/shelljs") shelljs
 
     section
         h2 Ubiquity
@@ -453,18 +457,30 @@ section
 
     section
         h2 NPM
+        img.logo(src="src/images/logos/npm.png")
+        p package manager for javascript
 
     section
         h2 Gulp/Grunt
-
-    section
-        h2 Babel
+        img.logo(src="src/images/logos/gulp.png")
+        img.logo(src="src/images/logos/grunt.png")
+        p javascript build system and task runner
 
     section
         h2 Webpack
+        img.logo(src="src/images/logos/webpack.png")
+        p module bundler for javascript
 
     section
         h2 Firebug / Chrome Dev Tools
+        img.logo(src="src/images/logos/firebug.png")
+        img.logo(src="src/images/logos/chrome.png")
+        p javascript debugging tools
+
+    section
+        h2 Babel
+        img.logo(src="src/images/logos/babel.png")
+        p pluggable javascript compiler
 
 section
     section
