--- a/src/slides.jade
+++ b/src/slides.jade
@@ -50,6 +50,127 @@ section
             a(href="https://www.destroyallsoftware.com/talks/wat" target="_blank") A lightning talk by Gary Bernhardt [CodeMash, 2012]
 
 section
+    section
+        h1 Popularity
+
+    section
+        h2 Popularity
+        h4 languages usage
+        img(src="src/images/popularity-github.jpg")
+        small @source: github
+
+
+    section
+        h2 Popularity
+        h4 libraries count
+        img(src="src/images/modules.png")
+        small @source: &nbsp;
+            a(href="http://www.modulecounts.com/") modulecounts.com
+
+    section
+        h2 Popularity
+        h4 google trends - tutorials search
+        img(src="src/images/popularity-pypl.png")
+        small @source: &nbsp;
+            a(href="http://pypl.github.io/PYPL.html") pypl.github.io
+
+section
+    section
+        h1 Ubiquity
+
+    section
+        h2 Ubiquity
+        h4 Browser & server
+        ul
+            li Node.js
+            li Angular
+            li React
+            li Ember
+            li Backbone
+            li Meteor
+            li Polymer
+            li Aurelia
+            li ...
+        div
+            br
+            a(href="http://www.isaacchansky.me/days-since-last-new-js-framework/") days-since-last-new-js-framework
+
+    section
+        h2 Ubiquity
+        h4 Cross platform desktop apps
+        ul
+            li
+                a(href="http://appjs.com/") App.js
+            li
+                a(href="http://electron.atom.io/") Electron (Atom Shell)
+            li
+                a(href="http://nwjs.io/") NW.js (node-webkit)
+
+    section
+        h2 Ubiquity
+        h4 Mobile native apps
+        ul
+            li
+                a(href="https://cordova.apache.org/") Cordova
+            li
+                a(href="http://phonegap.com/") Phonegap
+            li
+                a(href="https://facebook.github.io/react-native/") React-Native
+            li
+                a(href="http://ionicframework.com/") Ionic
+            li
+                a(href="https://www.nativescript.org/") NativeScript
+            li
+                a(href="https://tabrisjs.com/") Tabris
+
+    section
+        h2 Ubiquity
+        h4 Microcontrollers
+        ul
+            li
+                a(href="http://johnny-five.io/") Johnny Five
+            li
+                a(href="http://www.espruino.com/") Espruino
+            li
+                a(href="https://tessel.io/") Tessel
+            li
+                a(href="http://iop.io/") Iop.io
+
+    section
+        h2 Ubiquity
+        h4 Drones & IoT
+        ul
+            li
+                a(href="https://github.com/felixge/node-ar-drone") node-ar-drone
+            li
+                a(href="https://samsung.github.io/iotjs/") iot.js
+            li
+                a(href="https://cylonjs.com/") cyclon.js
+            li
+                a(href="https://www.cesanta.com/products/smart-js") Smart.js
+
+    section
+        h2 Ubiquity
+        h4 Shell
+        ul
+            li
+                a(href="https://github.com/kimmobrunfeldt/concurrently") concurently
+            li
+                a(href="https://github.com/dthree/cash") cach
+            li
+                a(href="https://github.com/shipitjs/shipit") shipit
+            li
+                a(href="https://www.npmjs.com/package/shelljs") shelljs
+
+    section
+        h2 Ubiquity
+        h4 Virtualisation
+        img(src="src/images/wat-duck.jpg")
+        div
+            br
+            a(href="https://github.com/copy/v86") V86
+
+section
     section#ecmascript
         style.
             #ecmascript table {
@@ -332,155 +453,34 @@ section
 
 section
     section
-        h1 Popularity
-
-    section
-        h2 Popularity
-        h4 languages usage
-        img(src="src/images/popularity-github.jpg")
-        small @source: github
-
-
-    section
-        h2 Popularity
-        h4 libraries count
-        img(src="src/images/modules.png")
-        small @source: &nbsp;
-            a(href="http://www.modulecounts.com/") modulecounts.com
-
-    section
-        h2 Popularity
-        h4 google trends - tutorials search
-        img(src="src/images/popularity-pypl.png")
-        small @source: &nbsp;
-            a(href="http://pypl.github.io/PYPL.html") pypl.github.io
-
-section
-    section
-        h1 Ubiquity
-
-    section
-        h2 Ubiquity
-        h4 Browser & server
-        ul
-            li Node.js
-            li Angular
-            li React
-            li Ember
-            li Backbone
-            li Meteor
-            li Polymer
-            li Aurelia
-            li ...
-        div
-            br
-            a(href="http://www.isaacchansky.me/days-since-last-new-js-framework/") days-since-last-new-js-framework
-
-    section
-        h2 Ubiquity
-        h4 Cross platform desktop apps
-        ul
-            li
-                a(href="http://appjs.com/") App.js
-            li
-                a(href="http://electron.atom.io/") Electron (Atom Shell)
-            li
-                a(href="http://nwjs.io/") NW.js (node-webkit)
-
-    section
-        h2 Ubiquity
-        h4 Mobile native apps
-        ul
-            li
-                a(href="https://cordova.apache.org/") Cordova
-            li
-                a(href="http://phonegap.com/") Phonegap
-            li
-                a(href="https://facebook.github.io/react-native/") React-Native
-            li
-                a(href="http://ionicframework.com/") Ionic
-            li
-                a(href="https://www.nativescript.org/") NativeScript
-            li
-                a(href="https://tabrisjs.com/") Tabris
-
-    section
-        h2 Ubiquity
-        h4 Microcontrollers
-        ul
-            li
-                a(href="http://johnny-five.io/") Johnny Five
-            li
-                a(href="http://www.espruino.com/") Espruino
-            li
-                a(href="https://tessel.io/") Tessel
-            li
-                a(href="http://iop.io/") Iop.io
-
-    section
-        h2 Ubiquity
-        h4 Drones & IoT
-        ul
-            li
-                a(href="https://github.com/felixge/node-ar-drone") node-ar-drone
-            li
-                a(href="https://samsung.github.io/iotjs/") iot.js
-            li
-                a(href="https://cylonjs.com/") cyclon.js
-            li
-                a(href="https://www.cesanta.com/products/smart-js") Smart.js
-
-    section
-        h2 Ubiquity
-        h4 Shell
-        ul
-            li
-                a(href="https://github.com/kimmobrunfeldt/concurrently") concurently
-            li
-                a(href="https://github.com/dthree/cash") cach
-            li
-                a(href="https://github.com/shipitjs/shipit") shipit
-            li
-                a(href="https://www.npmjs.com/package/shelljs") shelljs
-
-    section
-        h2 Ubiquity
-        h4 Virtualisation
-        img(src="src/images/wat-duck.jpg")
-        div
-            br
-            a(href="https://github.com/copy/v86") V86
-
-section
-    section
         h1 Tooling
 
     section
         h2 NPM
         img.logo(src="src/images/logos/npm.png")
-        p package manager for javascript
+        p package manager for JavaScript
 
     section
         h2 Gulp/Grunt
         img.logo(src="src/images/logos/gulp.png")
         img.logo(src="src/images/logos/grunt.png")
-        p javascript build system and task runner
+        p JavaScript build system and task runner
 
     section
         h2 Webpack
         img.logo(src="src/images/logos/webpack.png")
-        p module bundler for javascript
+        p module bundler for JavaScript
 
     section
         h2 Firebug / Chrome Dev Tools
         img.logo(src="src/images/logos/firebug.png")
         img.logo(src="src/images/logos/chrome.png")
-        p javascript debugging tools
+        p JavaScript debugging tools
 
     section
         h2 Babel
         img.logo(src="src/images/logos/babel.png")
-        p pluggable javascript compiler
+        p pluggable JavaScript compiler
 
 section
     section
@@ -488,17 +488,55 @@ section
 
     section
         h2 Transpilers
-        | typescript/coffeescript/pyjs/luajs/jsweet...
+        h3 source-to-source compilers
+        hr
+        ul(style="font-size: 0.8em;")
+            li CoffeeScript - syntactic sugar inspired by Ruby, Python and Haskell
+            li TypeScript - superset of JavaScript with optional static typing
+            li Dart - general-purpose programming language developed by Google
+            li JSX - superset with XML-like syntax for HTML elements representation
+        hr
+        p(style="font-size: 0.8em;")
+            | Other (366): ruby (9), python (16), java (16), scala (4), .NET (19), lisp-like (23)
+        small
+            | @more: &nbsp;
+            a(href="https://github.com/jashkenas/coffeescript/wiki/list-of-languages-that-compile-to-js") Languages compiled to JavaScript
 
     section
         h2 Typescript
+        pre
+            code.hjls.typescript.
+                interface Shape {
+                    new (color: string);
+                }
+
+                class Square implements Shape  {
+                    private size: number;
+                    constructor(size: number, color: string) {
+                        super(color);
+                        this.size = size;
+                    }
+                }
+
+                var square: Square = new Square(10, 'blue');
+
+    section
+        h2 Typescript
+        pre
+            code.hjls.typescript.
+                declare namespace d3 {
+                    export var version: string;
+                    export function select(selector: string): Selection<any>;
+                    export function selectAll(nodes: EventTarget[]): Selection<any>;
+                }
+
+                declare module 'd3' {
+                    export = d3;
+                }
 
     section
         h2 Asm.js
         a(href="http://webassembly.github.io/demo/") webassembly
-
-    section
-        h2 Vaadin/GWT/DukeScript
 
 section
     section
