--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -22,6 +22,13 @@
     font-size: 0.7em;
 }
 
+.reveal section pre {
+    margin-left: 1%;
+    margin-right: 1%;
+    width: 98%;
+}
+
 .reveal pre code {
      max-height: none;
 }
+
