--- a/src/slides.jade
+++ b/src/slides.jade
@@ -456,12 +456,16 @@ section
         h1 Tooling
 
     section
-        h2 NPM
-        img.logo(src="src/images/logos/npm.png")
-        p package manager for JavaScript
+        h2 NPM & Bower
+        .split
+            .left
+                img.logo(src="src/images/logos/npm.png")
+            .right
+                img.logo(src="src/images/logos/bower.png")
+        p package managers for JavaScript
 
     section
-        h2 Gulp/Grunt
+        h2 Gulp & Grunt
         img.logo(src="src/images/logos/gulp.png")
         img.logo(src="src/images/logos/grunt.png")
         p JavaScript build system and task runner
@@ -472,9 +476,12 @@ section
         p module bundler for JavaScript
 
     section
-        h2 Firebug / Chrome Dev Tools
-        img.logo(src="src/images/logos/firebug.png")
-        img.logo(src="src/images/logos/chrome.png")
+        h2 Firebug & Chrome Dev Tools
+        .split
+            .left
+                img.logo(style="height: 35vh;" src="src/images/logos/firebug.png")
+            .right
+                img.logo(src="src/images/logos/chrome.png")
         p JavaScript debugging tools
 
     section
